--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="clr-namespace:WpfApp"
 		mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="700">
+        Title="MainWindow" Height="400" Width="800">
 	<Window.DataContext>
 		<vm:ViewModel />
 	</Window.DataContext>
@@ -20,24 +20,11 @@
 
 		<Style TargetType="Button" x:Key="ButtonStyle">
 			<Setter Property="Content" Value="{StaticResource icon}" />
+			<Setter Property="Margin" Value="0 0 0 5" />
 			<Setter Property="Height" Value="20" />
 			<Setter Property="Width" Value="40" />
 			<Setter Property="Command" Value="{Binding OpenDialogCommand}" />
 			<Setter Property="CommandParameter" Value="{Binding RelativeSource={RelativeSource Self}, Path=Name}" />
-		</Style>
-		
-		<Style TargetType="ListView" x:Key="ListViewStyle" x:Shared="false">
-			<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Visible" />
-			<Setter Property="ScrollViewer.CanContentScroll" Value="False" />
-			<Setter Property="View">
-				<Setter.Value>
-					<GridView>
-						<GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=Name}" />
-						<GridViewColumn Header="Size, KB"  DisplayMemberBinding="{Binding Path=Size}" />
-						<GridViewColumn Header="Last modified" DisplayMemberBinding="{Binding Path=LastModified}" />
-					</GridView>
-				</Setter.Value>
-			</Setter>
 		</Style>
 	</Window.Resources>
 	
@@ -60,18 +47,74 @@
 					<ColumnDefinition></ColumnDefinition>
 				</Grid.ColumnDefinitions>
 
-				<TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Choose directories to compare their content" HorizontalAlignment="Center"></TextBlock>
+				<StackPanel Grid.Row="0" Grid.ColumnSpan="2">
+					<TextBlock Text="Choose directories to compare their content" HorizontalAlignment="Center"></TextBlock>
+					<Label Content="{Binding ErrorMessage}" HorizontalAlignment="Center" Width="{Binding ElementName=CompareButton}" MaxHeight="25" Foreground="Red" />
+				</StackPanel>
 				
 				<TextBox  Grid.Row="1" Grid.Column="0" x:Name="SelectedPath1" Style="{StaticResource TextBoxStyle}" Text="{Binding SelectedPath1}"></TextBox>
 				<Button   Grid.Row="2" Grid.Column="0" x:Name="Path1" Style="{StaticResource ButtonStyle}"></Button>
-				<ListView Grid.Row="3" Grid.Column="0" x:Name="FileList1" ItemsSource="{Binding FirstDirectory}" Style="{StaticResource ListViewStyle}" />
-				
+				<DataGrid Grid.Row="3" Grid.Column="0" AutoGenerateColumns="False" ItemsSource="{Binding FirstDirectory}" Margin="5 0">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Name" Width="2*" Binding="{Binding Name}">
+							<DataGridTextColumn.CellStyle>
+								<Style TargetType="DataGridCell">
+									<Style.Triggers>
+										<MultiDataTrigger>
+											<MultiDataTrigger.Conditions>
+												<Condition Binding="{Binding HasUniqueName}" Value="False" />
+												<Condition Binding="{Binding HasUniqueSize}" Value="False" />
+											</MultiDataTrigger.Conditions>
+											<Setter Property="Foreground" Value="Green" />
+										</MultiDataTrigger>
+										<MultiDataTrigger>
+											<MultiDataTrigger.Conditions>
+												<Condition Binding="{Binding HasUniqueName}" Value="False" />
+												<Condition Binding="{Binding HasUniqueSize}" Value="True" />
+											</MultiDataTrigger.Conditions>
+											<Setter Property="Foreground" Value="Blue" />
+										</MultiDataTrigger>
+									</Style.Triggers>
+								</Style>
+							</DataGridTextColumn.CellStyle>
+						</DataGridTextColumn>
+						<DataGridTextColumn Width="*" Binding="{Binding Path=Size}" Header="Size"/>
+						<DataGridTextColumn Width="2*" Binding="{Binding Path=LastModified}" Header="Last modified"/>
+					</DataGrid.Columns>
+				</DataGrid>
+
 				<TextBox  Grid.Row="1" Grid.Column="1" x:Name="SelectedPath2" Style="{StaticResource TextBoxStyle}" Text="{Binding SelectedPath2}" ></TextBox>
 				<Button   Grid.Row="2" Grid.Column="1" x:Name="Path2" Style="{StaticResource ButtonStyle}"></Button>
-				<ListView Grid.Row="3" Grid.Column="1" x:Name="FileList2" ItemsSource="{Binding SecondDirectory}" Style="{StaticResource ListViewStyle}" />
+				<DataGrid Grid.Row="3" Grid.Column="1" AutoGenerateColumns="False" ItemsSource="{Binding SecondDirectory}" Margin="5 0">
+					<DataGrid.Columns>
+						<DataGridTextColumn Header="Name" Width="2*" Binding="{Binding Name}">
+							<DataGridTextColumn.CellStyle>
+								<Style TargetType="DataGridCell">
+									<Style.Triggers>
+										<MultiDataTrigger>
+											<MultiDataTrigger.Conditions>
+												<Condition Binding="{Binding HasUniqueName}" Value="False" />
+												<Condition Binding="{Binding HasUniqueSize}" Value="False" />
+											</MultiDataTrigger.Conditions>
+											<Setter Property="Foreground" Value="Green" />
+										</MultiDataTrigger>
+										<MultiDataTrigger>
+											<MultiDataTrigger.Conditions>
+												<Condition Binding="{Binding HasUniqueName}" Value="False" />
+												<Condition Binding="{Binding HasUniqueSize}" Value="True" />
+											</MultiDataTrigger.Conditions>
+											<Setter Property="Foreground" Value="Blue" />
+										</MultiDataTrigger>
+									</Style.Triggers>
+								</Style>
+							</DataGridTextColumn.CellStyle>
+						</DataGridTextColumn>
+						<DataGridTextColumn Width="*" Binding="{Binding Path=Size}" Header="Size"/>
+						<DataGridTextColumn Width="2*" Binding="{Binding Path=LastModified}" Header="Last modified"/>
+					</DataGrid.Columns>
+				</DataGrid>
 			</Grid>
-			
-			<Button Grid.Row="1" Content="Compare" MaxWidth="120" MaxHeight="25" Command="{Binding CompareFoldersCommand}"></Button>
+			<Button Grid.Row="1" x:Name="CompareButton" Content="Compare" Width="120" MaxHeight="25" Command="{Binding CompareFoldersCommand}" Margin="5"></Button>
 		</Grid>
 	</Border>
 </Window>
